--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "version": "4.0.0",
   "author": "Developer Jahid <contact@developerjahid.com>",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "2.23.3",
     "gatsby-plugin-manifest": "2.4.11",
     "gatsby-plugin-offline": "3.2.9",
     "gatsby-plugin-postcss": "2.3.4",
     "gatsby-plugin-react-helmet": "3.3.4",
-    "gatsby-plugin-sharp": "2.6.11",
+    "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-source-filesystem": "^2.3.11",
+    "gatsby-source-sanity": "^5.0.6",
+    "gatsby-source-sanity-transform-images": "0.0.7",
+    "gatsby-transformer-sharp": "^2.5.5",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
