--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "author": "Developer Jahid <contact@developerjahid.com>",
   "dependencies": {
     "@raae/gatsby-remark-oembed": "^0.1.1",
+    "@sanity/block-content-to-react": "^2.0.7",
     "dotenv": "^8.2.0",
     "gatsby": "2.23.3",
+    "gatsby-image": "^2.4.7",
     "gatsby-plugin-manifest": "2.4.11",
     "gatsby-plugin-offline": "3.2.9",
     "gatsby-plugin-postcss": "2.3.4",
