--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "dotenv": "^8.2.0",
     "gatsby": "2.23.3",
     "gatsby-image": "^2.4.7",
+    "gatsby-plugin-canonical-urls": "^2.3.4",
     "gatsby-plugin-manifest": "2.4.11",
     "gatsby-plugin-offline": "3.2.9",
     "gatsby-plugin-postcss": "2.3.4",
     "gatsby-plugin-react-helmet": "3.3.4",
+    "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-plugin-sitemap": "^2.4.5",
     "gatsby-source-filesystem": "^2.3.11",
     "gatsby-source-sanity": "^5.0.6",
     "gatsby-source-sanity-transform-images": "0.0.7",
