--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-manifest": "2.4.11",
     "gatsby-plugin-offline": "3.2.9",
     "gatsby-plugin-postcss": "2.3.4",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "3.3.4",
     "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sharp": "^2.6.11",
@@ -22,12 +23,16 @@
     "gatsby-source-sanity-transform-images": "0.0.7",
     "gatsby-transformer-remark": "^2.8.15",
     "gatsby-transformer-sharp": "^2.5.5",
+    "isotope-layout": "^3.0.6",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "6.1.0",
     "react-icons": "^3.10.0",
-    "react-responsive-carousel": "^3.2.7"
+    "react-masonry-component": "^6.2.1",
+    "react-responsive-carousel": "^3.2.7",
+    "react-slick": "^0.26.1",
+    "slick-carousel": "^1.8.1"
   },
   "keywords": [
     "gatsby",
