--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-helmet": "6.1.0",
     "react-icons": "^3.10.0",
     "react-masonry-component": "^6.2.1",
+    "react-player": "^2.3.1",
     "react-responsive-carousel": "^3.2.7",
     "react-slick": "^0.26.1",
     "slick-carousel": "^1.8.1"
